tests/asm-link/purge-ref/rgbasm.err
error: cannot delete a symbol that doesn't exist
   ╭─[ test.asm:4:8 ]
   │
 4 │     PURGE ref
   │           ─┬─  
   │            ╰─── no symbol named `ref` exists at this point
───╯
error: labels cannot be deleted
   ╭─[ test.asm:7:8 ]
   │
 7 │     PURGE OK
   │           ─┬  
   │            ╰── attempting to delete `OK` here
───╯
error: labels cannot be deleted
    ╭─[ test.asm:11:8 ]
    │
 11 │     PURGE NotOK
    │           ──┬──  
    │             ╰──── attempting to delete `NotOK` here
────╯
error: labels cannot be deleted
    ╭─[ test.asm:15:8 ]
    │
 15 │     PURGE EvenLessOK
    │           ─────┬────  
    │                ╰────── attempting to delete `EvenLessOK` here
────╯
error: labels cannot be deleted
    ╭─[ test.asm:23:8 ]
    │
 23 │     PURGE Maybe
    │           ──┬──  
    │             ╰──── attempting to delete `Maybe` here
────╯
5 errors generated.
